--- a/app/views/homes/greeting.html.erb
+++ b/app/views/homes/greeting.html.erb
@@ -1,30 +1,30 @@
 <div class="ui container p-none--sides" id="main_container">
-	<div class="ui center aligned middle aligned stackable grid full-height">
+	<div class="ui right aligned middle aligned stackable grid full-height">
 
-		<div class="sixteen wide column">
+		<div class="sixteen wide column wrapper tm-deep-shadow p-medium--all">
 				<div id="card-selection">
 					<div class="ui six cards">
 						<% @desktop_templates.each_with_index do |template, index| %>
-							<div class="fluid card tm-deep-shadow <%= "active" if index == 0 %>" data-template="<%= index + 1 %>">
+							<div class="fluid card <%= "active" if index == 0 %>" data-template="<%= index + 1 %>">
 								<%= image_tag "#{template}.png" %>
 							</div>
 						<% end %>
 					</div>
 				</div>
-				<div id="canvas-container" class="tm-deep-shadow">
+				<div id="canvas-container">
 					<%= render 'homes/form' %>
 				</div>
-				<button class="ui red tm-deep-shadow button tm-button"
+				<button class="ui tm-grey button tm-button m-medium--top"
 								id="preview-button">
 					Xem trước
 				</button>
-				<div class="ui tm-deep-shadow buttons" id="action-buttons">
-					<button class="ui orange button tm-button"
+				<div class="ui buttons" id="action-buttons">
+					<button class="ui tm-grey button tm-button m-medium--top"
 									id="back-button"
 									style="display: none">
 						Chỉnh sửa
 					</button>
-					<button class="ui red button tm-button"
+					<button class="ui tm-blue button tm-button m-medium--top"
 									id="send-button"
 									style="display: none">
 						Tạo Thiệp
