Removed turbolink to prevent confilt and improve some point

--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -9,11 +9,6 @@
 					<i class="plus icon"></i>
 					Tạo thêm thiệp
 				</a>
-				<!-- <button class="ui blue icon button  m-medium--top"
-								id="fb-send-button">
-					<i class="facebook icon"></i>
-					Gửi qua Messenger
-				</button> -->
 				<button class="ui blue icon button  m-medium--top"
 								id="fb-share-button">
 					<i class="facebook icon"></i>
@@ -29,3 +24,8 @@
 		</div>
 	</div>
 </div>
+<style>
+	#card-canvas {
+		display: none;
+	}
+</style>
